--- a/package.json
+++ b/package.json
@@ -72,11 +72,13 @@
   "homepage": "https://github.com/cozy/cozy-drive#readme",
   "devDependencies": {
     "@sentry/cli": "1.44.2",
+    "@testing-library/react": "^10.0.1",
     "babel-core": "7.0.0-bridge.0",
     "chrome-remote-interface": "0.27.1",
     "cordova": "7.1.0",
     "cordova-android": "7.1.4",
     "cozy-jobs-cli": "1.11.2",
+    "css-mediaquery": "^0.1.2",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.2",
     "enzyme-to-json": "3.4.4",
@@ -103,7 +105,7 @@
     "cozy-authentication": "^2.0.5",
     "cozy-bar": "7.12.1",
     "cozy-ci": "0.4.1",
-    "cozy-client": "12.4.0",
+    "cozy-client": "^12.6.0",
     "cozy-client-js": "0.16.4",
     "cozy-device-helper": "1.9.2",
     "cozy-doctypes": "1.70.0",
@@ -112,7 +114,7 @@
     "cozy-scanner": "0.3.1",
     "cozy-scripts": "1.13.2",
     "cozy-sharing": "1.8.11",
-    "cozy-stack-client": "11.2.0",
+    "cozy-stack-client": "^12.6.0",
     "cozy-ui": "33.1.0",
     "date-fns": "1.30.1",
     "diacritics": "1.3.0",
