--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ node-preset: &node # Used internally to share configuration, ignored by travis.
     yarn: true
     directories:
       - node_modules
+  before_install:
+    - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.22.4
 branches:
   only:
     - master
