--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ node-preset: &node # Used internally to share configuration, ignored by travis.
       - node_modules
   before_install:
     - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.22.4
+    - export PATH="$HOME/.yarn/bin:$HOME/.config/yarn/global/node_modules/.bin:$PATH"
 branches:
   only:
     - master
