--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
     "cozy-authentication": "^2.0.5",
     "cozy-bar": "7.12.1",
     "cozy-ci": "0.4.1",
-    "cozy-client": "^12.6.0",
+    "cozy-client": "13.1.1",
     "cozy-client-js": "0.16.4",
     "cozy-device-helper": "1.9.2",
     "cozy-doctypes": "1.70.0",
@@ -114,7 +114,7 @@
     "cozy-scanner": "0.3.1",
     "cozy-scripts": "1.13.2",
     "cozy-sharing": "^1.8.12",
-    "cozy-stack-client": "^12.6.0",
+    "cozy-stack-client": "13.1.0",
     "cozy-ui": "33.1.0",
     "date-fns": "1.30.1",
     "diacritics": "1.3.0",
