--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
     "worker-loader": "2.0.0"
   },
   "dependencies": {
-    "@material-ui/core": "4.4.3",
+    "@material-ui/core": "3.9.4",
     "babel-preset-cozy-app": "1.7.0",
     "classnames": "2.2.6",
     "copy-text-to-clipboard": "1.0.4",
@@ -111,11 +111,11 @@
     "cozy-doctypes": "1.70.0",
     "cozy-flags": "1.11.0",
     "cozy-realtime": "3.7.0",
-    "cozy-scanner": "0.3.1",
+    "cozy-scanner": "^0.3.2",
     "cozy-scripts": "1.13.2",
     "cozy-sharing": "^1.8.12",
     "cozy-stack-client": "13.1.0",
-    "cozy-ui": "33.1.0",
+    "cozy-ui": "^33.3.1",
     "date-fns": "1.30.1",
     "diacritics": "1.3.0",
     "fastclick": "1.0.6",
