--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "lint:js": "eslint '{src,test}/**/*.{js,jsx}'",
     "testcafe:drive": "node testcafe/runner-drive.js",
     "testcafe:photos": "node testcafe/runner-photos.js",
-    "test": "env USE_REACT=true cozy-scripts test --verbose --coverage --config=jest.config.json",
+    "test": "env USE_REACT=true cozy-scripts test --config=jest.config.json",
     "genicon:drive:mobile": "(cd src/drive/targets/mobile && rm -Rf ./res/icons ./res/screens && splashicon-generator --imagespath='./res/model' && cp res/model/splash.png res/screens/ios/Default@2x~universal~anyany.png)",
     "prepare:drive:mobile": "(cd src/drive/targets/mobile && rm -rf platforms && rm -rf plugins && rm package.json || true && rm package-lock.json || true && cordova prepare)",
     "run:drive:android": "(cd src/drive/targets/mobile && cordova run android --device)",
