chore: Use recent versions of node and yarn on android

--- a/.travis.yml
+++ b/.travis.yml
@@ -89,9 +89,11 @@ jobs:
         - yes | sdkmanager "platforms;android-27" # see https://github.com/travis-ci/travis-ci/issues/8874#issuecomment-350350607
         - scripts/decrypt.sh
         - scripts/signing.sh
-        - curl -sL https://deb.nodesource.com/setup_10.x | sudo -E bash -
+        - curl -sL https://deb.nodesource.com/setup_12.x | sudo -E bash -
         - sudo apt-get install nodejs
         - sudo apt-get install build-essential
+        - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.22.4
+        - export PATH="$HOME/.yarn/bin:$HOME/.config/yarn/global/node_modules/.bin:$PATH"
         - yarn
         - yarn run cozy-ci-transifex
         - export PATH=/usr/local/android-sdk/build-tools/26.0.2:$PATH # Required to expose apksigner command.
