--- a/jest.config.json
+++ b/jest.config.json
@@ -28,6 +28,7 @@
     "^.+\\.webapp$": "<rootDir>/test/jestLib/json-transformer.js"
   },
   "transformIgnorePatterns": ["node_modules/(?!cozy-ui)/"],
+  "testEnvironment": "jest-environment-jsdom-sixteen",
   "testMatch": ["**/(*.)(spec|test).js?(x)"],
   "globals": {
     "__APP_SLUG__": "drive"
