--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "eslint-config-cozy-app": "1.1.4",
     "husky": "0.14.3",
     "identity-obj-proxy": "3.0.0",
+    "jest-environment-jsdom-sixteen": "^1.0.3",
     "npm-run-all": "4.1.5",
     "react-addons-test-utils": "15.6.2",
     "react-test-renderer": "15.6.2",
