--- a/jest.config.json
+++ b/jest.config.json
@@ -17,6 +17,7 @@
     "^viewer(.*)": "<rootDir>/src/viewer$1",
     "^react-cozy-helpers(.*)": "<rootDir>/src/lib/react-cozy-helpers$1",
     "^components(.*)": "<rootDir>/src/components$1",
+    "^test(.*)": "<rootDir>/test/$1",
     "^folder-references(.*)": "<rootDir>/src/folder-references$1",
     "^lib(.*)": "<rootDir>/src/lib$1",
     "react-pdf/dist/pdf.worker.entry.js": "<rootDir>/jestHelpers/mocks/pdfjsWorkerMock.js",
@@ -31,6 +32,7 @@
   "testEnvironment": "jest-environment-jsdom-sixteen",
   "testMatch": ["**/(*.)(spec|test).js?(x)"],
   "globals": {
-    "__APP_SLUG__": "drive"
+    "__APP_SLUG__": "drive",
+    "__TARGET__": "browser"
   }
 }
