--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
   "devDependencies": {
     "@sentry/cli": "1.44.2",
     "@testing-library/react": "^10.0.1",
+    "@testing-library/react-hooks": "^3.3.0",
     "babel-core": "7.0.0-bridge.0",
     "chrome-remote-interface": "0.27.1",
     "cordova": "7.1.0",
@@ -88,7 +89,7 @@
     "jest-environment-jsdom-sixteen": "^1.0.3",
     "npm-run-all": "4.1.5",
     "react-addons-test-utils": "15.6.2",
-    "react-test-renderer": "15.6.2",
+    "react-test-renderer": "16.13.1",
     "replace": "1.1.5",
     "splashicon-generator": "0.2.12",
     "stylint": "1.5.9",
