feat: Enable offline sync in cozy-client

--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "cozy-device-helper": "1.9.2",
     "cozy-doctypes": "1.72.2",
     "cozy-flags": "1.11.0",
+    "cozy-pouch-link": "^13.8.5",
     "cozy-realtime": "3.8.0",
     "cozy-scanner": "^0.3.2",
     "cozy-scripts": "1.13.2",
@@ -136,6 +137,7 @@
     "node-uuid": "1.4.8",
     "piwik-react-router": "0.8.2",
     "popper.js": "1.14.4",
+    "pouchdb-adapter-cordova-sqlite": "^2.0.7",
     "pouchdb-find": "0.10.5",
     "prop-types": "15.7.2",
     "raven-js": "3.26.4",
