--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "enzyme-adapter-react-16": "1.15.4",
     "enzyme-to-json": "3.5.0",
     "eslint-config-cozy-app": "1.1.4",
+    "eslint-plugin-react": "7.20.0",
     "eslint-plugin-react-hooks": "4.0.4",
     "husky": "0.14.3",
     "identity-obj-proxy": "3.0.0",
