--- a/package.json
+++ b/package.json
@@ -107,17 +107,17 @@
     "cozy-authentication": "^2.0.5",
     "cozy-bar": "7.12.2",
     "cozy-ci": "0.4.1",
-    "cozy-client": "13.12.1",
+    "cozy-client": "13.13.0",
     "cozy-client-js": "0.16.4",
     "cozy-device-helper": "1.9.2",
     "cozy-doctypes": "1.72.2",
     "cozy-flags": "1.11.0",
-    "cozy-pouch-link": "^13.8.5",
+    "cozy-pouch-link": "13.13.0",
     "cozy-realtime": "3.8.0",
     "cozy-scanner": "^0.3.2",
     "cozy-scripts": "1.13.2",
     "cozy-sharing": "1.11.4",
-    "cozy-stack-client": "13.12.0",
+    "cozy-stack-client": "13.12.1",
     "cozy-ui": "35.17.0",
     "date-fns": "1.30.1",
     "diacritics": "1.3.0",
