--- a/package.json
+++ b/package.json
@@ -107,18 +107,18 @@
     "cozy-authentication": "^2.0.5",
     "cozy-bar": "7.12.2",
     "cozy-ci": "0.4.1",
-    "cozy-client": "13.18.1",
+    "cozy-client": "14.0.0",
     "cozy-client-js": "0.16.4",
     "cozy-device-helper": "1.9.2",
     "cozy-doctypes": "1.72.2",
     "cozy-flags": "1.11.0",
     "cozy-pouch-link": "13.18.2",
     "cozy-realtime": "3.9.0",
-    "cozy-scanner": "^0.3.2",
+    "cozy-scanner": "0.5.1",
     "cozy-scripts": "1.13.2",
-    "cozy-sharing": "1.13.4",
+    "cozy-sharing": "1.15.0",
     "cozy-stack-client": "13.15.1",
-    "cozy-ui": "35.33.2",
+    "cozy-ui": "35.40.2",
     "date-fns": "1.30.1",
     "diacritics": "1.3.0",
     "fastclick": "1.0.6",
