--- a/package.json
+++ b/package.json
@@ -107,18 +107,18 @@
     "cozy-authentication": "^2.0.5",
     "cozy-bar": "7.12.2",
     "cozy-ci": "0.4.1",
-    "cozy-client": "14.6.0",
+    "cozy-client": "15.0.0",
     "cozy-client-js": "0.17.3",
     "cozy-device-helper": "1.10.1",
     "cozy-doctypes": "1.72.2",
     "cozy-flags": "1.11.0",
-    "cozy-pouch-link": "14.7.0",
+    "cozy-pouch-link": "15.0.0",
     "cozy-realtime": "3.9.0",
     "cozy-scanner": "0.5.1",
     "cozy-scripts": "1.13.2",
     "cozy-sharing": "1.16.0",
     "cozy-stack-client": "14.1.2",
-    "cozy-ui": "36.1.2",
+    "cozy-ui": "37.2.1",
     "date-fns": "1.30.1",
     "diacritics": "1.3.0",
     "fastclick": "1.0.6",
@@ -137,6 +137,7 @@
     "piwik-react-router": "0.8.2",
     "popper.js": "1.16.1",
     "pouchdb-adapter-cordova-sqlite": "^2.0.7",
+    "pouchdb-debug": "^7.2.1",
     "prop-types": "15.7.2",
     "raven-js": "3.26.4",
     "react": "16.10.2",
