--- a/package.json
+++ b/package.json
@@ -72,8 +72,8 @@
   "homepage": "https://github.com/cozy/cozy-drive#readme",
   "devDependencies": {
     "@sentry/cli": "1.44.2",
-    "@testing-library/react": "^10.0.1",
-    "@testing-library/react-hooks": "^3.3.0",
+    "@testing-library/react": "11.0.4",
+    "@testing-library/react-hooks": "3.4.2",
     "babel-core": "7.0.0-bridge.0",
     "chrome-remote-interface": "0.27.1",
     "cordova": "7.1.0",
@@ -140,9 +140,9 @@
     "pouchdb-debug": "^7.2.1",
     "prop-types": "15.7.2",
     "raven-js": "3.26.4",
-    "react": "16.10.2",
+    "react": "16.13.1",
     "react-autosuggest": "9.3.4",
-    "react-dom": "16.10.2",
+    "react-dom": "16.13.1",
     "react-dropzone": "5.1.1",
     "react-hot-loader": "^4.12.19",
     "react-markdown": "3.6.0",
