--- a/package.json
+++ b/package.json
@@ -102,18 +102,19 @@
     "worker-loader": "2.0.0"
   },
   "dependencies": {
+    "@cozy/minilog": "1.0.0",
     "@material-ui/core": "3.9.4",
     "classnames": "2.2.6",
     "copy-text-to-clipboard": "1.0.4",
     "cozy-authentication": "^2.0.5",
     "cozy-bar": "7.15.2",
     "cozy-ci": "0.4.1",
-    "cozy-client": "15.3.1",
+    "cozy-client": "15.4.2",
     "cozy-client-js": "0.17.3",
     "cozy-device-helper": "1.10.1",
     "cozy-doctypes": "1.72.2",
     "cozy-flags": "1.11.0",
-    "cozy-pouch-link": "15.3.1",
+    "cozy-pouch-link": "15.4.2",
     "cozy-realtime": "3.9.0",
     "cozy-scanner": "0.5.1",
     "cozy-scripts": "5.1.3",
@@ -132,7 +133,6 @@
     "lodash": "4.17.19",
     "log-prefix": "0.1.1",
     "mime-types": "2.1.24",
-    "minilog": "https://github.com/cozy/minilog.git#master",
     "node-polyglot": "2.4.0",
     "node-uuid": "1.4.8",
     "piwik-react-router": "0.8.2",
