--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
   "dependencies": {
     "@cozy/minilog": "1.0.0",
     "@material-ui/core": "3.9.4",
+    "@material-ui/styles": "4.10.0",
     "classnames": "2.2.6",
     "copy-text-to-clipboard": "1.0.4",
     "cozy-authentication": "^2.0.5",
@@ -116,11 +117,11 @@
     "cozy-flags": "1.11.0",
     "cozy-pouch-link": "15.4.2",
     "cozy-realtime": "3.9.0",
-    "cozy-scanner": "0.5.1",
+    "cozy-scanner": "0.5.5",
     "cozy-scripts": "5.1.3",
     "cozy-sharing": "2.2.0",
     "cozy-stack-client": "16.0.0",
-    "cozy-ui": "38.2.0",
+    "cozy-ui": "39.2.0",
     "date-fns": "1.30.1",
     "diacritics": "1.3.0",
     "fastclick": "1.0.6",
