--- a/package.json
+++ b/package.json
@@ -146,7 +146,6 @@
     "react-autosuggest": "9.3.4",
     "react-dom": "16.13.1",
     "react-dropzone": "5.1.1",
-    "react-markdown": "3.6.0",
     "react-measure": "2.5.0",
     "react-redux": "7.2.0",
     "react-router": "3.2.4",
@@ -157,6 +156,7 @@
     "redux-raven-middleware": "1.2.0",
     "redux-thunk": "2.3.0",
     "scheduler": "0.17.0",
+    "snarkdown": "2.0.0",
     "webpack-node-externals": "1.7.2",
     "whatwg-fetch": "3.0.0"
   }
