--- a/package.json
+++ b/package.json
@@ -124,7 +124,7 @@
     "cozy-scripts": "5.1.1",
     "cozy-sharing": "2.12.0",
     "cozy-stack-client": "17.1.1",
-    "cozy-ui": "45.0.0",
+    "cozy-ui": "45.0.0-beta.5",
     "date-fns": "1.30.1",
     "diacritics": "1.3.0",
     "fastclick": "1.0.6",
