--- a/package.json
+++ b/package.json
@@ -136,6 +136,7 @@
     "lodash": "4.17.19",
     "log-prefix": "0.1.1",
     "mime-types": "2.1.24",
+    "mui-bottom-sheet": "https://github.com/cozy/mui-bottom-sheet.git#v1.0.5",
     "node-fetch": "2.6.1",
     "node-polyglot": "2.4.0",
     "node-uuid": "1.4.8",
