chore: Use yarn instead of npm run in scripts

--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.34.0",
   "main": "src/main.jsx",
   "scripts": {
-    "build:drive": "npm run build:drive:browser",
+    "build:drive": "yarn build:drive:browser",
     "build:drive:browser": "COZY_APP_SLUG=drive cozy-scripts build --manifest src/drive/targets/manifest.webapp --build-dir build/drive --src-dir src/drive",
     "build:drive:mobile": "COZY_APP_SLUG=drive cozy-scripts build --mobile --manifest src/drive/targets/manifest.webapp --src-dir src/drive",
-    "watch:drive": "npm run watch:drive:browser",
+    "watch:drive": "yarn watch:drive:browser",
     "watch:drive:browser": "COZY_APP_SLUG=drive cozy-scripts watch --manifest src/drive/targets/manifest.webapp --build-dir build/drive --src-dir src/drive",
     "watch:drive:mobile": "COZY_APP_SLUG=drive NODE_ENV=mobile:development cozy-scripts watch --manifest src/drive/targets/manifest.webapp --src-dir src/drive",
     "start:drive:browser": "COZY_APP_SLUG=drive cozy-scripts start --manifest src/drive/targets/manifest.webapp --build-dir build/drive --src-dir src/drive",
@@ -14,7 +14,7 @@
     "start:drive:standalone": "COZY_APP_SLUG=drive NODE_ENV=mobile:development cozy-scripts start  --manifest src/drive/targets/manifest.webapp --src-dir src/drive",
     "build:photos": "npm-run-all --parallel build:photos:browser",
     "build:photos:browser": "COZY_APP_SLUG=photos cozy-scripts build --manifest src/photos/targets/manifest.webapp --build-dir build/photos --src-dir src/photos",
-    "watch:photos": "npm run watch:photos:browser",
+    "watch:photos": "yarn watch:photos:browser",
     "watch:photos:browser": "COZY_APP_SLUG=photos cozy-scripts watch --manifest src/photos/targets/manifest.webapp --build-dir build/photos --src-dir src/photos",
     "start:photos:browser": "COZY_APP_SLUG=photos cozy-scripts start --manifest src/photos/targets/manifest.webapp --build-dir build/photos --src-dir src/photos",
     "deploy:drive": "cozy-app-publish --token $REGISTRY_TOKEN --build-dir 'build/drive/' --prepublish downcloud --postpublish mattermost",
@@ -34,12 +34,12 @@
     "build:drive:android:debug": "(cd src/drive/targets/mobile && cordova build android --debug -- --gradleArg=-PcdvMinSdkVersion=19 --gradleArg=-PcdvBuildToolsVersion=29.0.0 --gradleArg=-PcdvCompileSdkVersion=android-29)",
     "sign:drive:android": "(cd src/drive/targets/mobile && apksigner sign --ks keys/android/cozy-drive-release-key.jks --out build/android/cozy-drive.apk platforms/android/app/build/outputs/apk/release/app-release-unsigned.apk)",
     "autosign:drive:android": "(cd src/drive/targets/mobile && apksigner sign --ks keys/android/cozy-drive-release-key.jks --ks-pass env:ANDROID_KEYSTORE_PASS --out build/android/cozy-drive.apk platforms/android/app/build/outputs/apk/release/app-release-unsigned.apk)",
-    "buildsigned:drive:android": "npm run build:drive:android && npm run sign:drive:android",
-    "publish:drive:android": "npm run build:drive:mobile && npm run buildsigned:drive:android && (cd src/drive/targets/mobile && fastlane android pushbeta)",
+    "buildsigned:drive:android": "yarn build:drive:android && yarn sign:drive:android",
+    "publish:drive:android": "yarn build:drive:mobile && yarn buildsigned:drive:android && (cd src/drive/targets/mobile && fastlane android pushbeta)",
     "publishbeta:drive:android": "(cd src/drive/targets/mobile && fastlane android pushbeta)",
     "run:drive:ios": "(cd src/drive/targets/mobile && cordova run ios --buildFlag='-UseModernBuildSystem=0' --device)",
     "run:drive:ios:emulator": "(cd src/drive/targets/mobile && cordova run ios --buildFlag='-UseModernBuildSystem=0' --emulator)",
-    "publish:drive:ios": "npm run build:drive:mobile && (cd src/drive/targets/mobile && fastlane ios pushtest)",
+    "publish:drive:ios": "yarn build:drive:mobile && (cd src/drive/targets/mobile && fastlane ios pushtest)",
     "sentry:drive:mobile": "sentry-cli releases -o sentry -p cozy-drive-v3 files $npm_package_version upload-sourcemaps ./src/drive/targets/mobile/www",
     "version:drive:manifest": "replace '\\d+\\.\\d+\\.\\d+' $npm_package_version ./src/drive/targets/manifest.webapp",
     "version:drive:config": "replace 'version=\"\\d+\\.\\d+\\.\\d+\"' 'version=\"'$npm_package_version'\"' ./src/drive/targets/mobile/config.xml",
