chore: Add creation of build/android folder in build script

--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "run:drive:android:emulator": "(cd src/drive/targets/mobile && cordova run android --emulator -- --gradleArg=-PcdvMinSdkVersion=19 --gradleArg=-PcdvBuildToolsVersion=29.0.0 --gradleArg=-PcdvCompileSdkVersion=android-29)",
     "build:drive:android": "(cd src/drive/targets/mobile && cordova build android --release -- --gradleArg=-PcdvMinSdkVersion=19 --gradleArg=-PcdvBuildToolsVersion=29.0.0 --gradleArg=-PcdvCompileSdkVersion=android-29)",
     "build:drive:android:debug": "(cd src/drive/targets/mobile && cordova build android --debug -- --gradleArg=-PcdvMinSdkVersion=19 --gradleArg=-PcdvBuildToolsVersion=29.0.0 --gradleArg=-PcdvCompileSdkVersion=android-29)",
-    "sign:drive:android": "(cd src/drive/targets/mobile && apksigner sign --ks keys/android/cozy-drive-release-key.jks --out build/android/cozy-drive.apk platforms/android/app/build/outputs/apk/release/app-release-unsigned.apk)",
-    "autosign:drive:android": "(cd src/drive/targets/mobile && apksigner sign --ks keys/android/cozy-drive-release-key.jks --ks-pass env:ANDROID_KEYSTORE_PASS --out build/android/cozy-drive.apk platforms/android/app/build/outputs/apk/release/app-release-unsigned.apk)",
+    "sign:drive:android": "(cd src/drive/targets/mobile && mkdir -p build/android && apksigner sign --ks keys/android/cozy-drive-release-key.jks --out build/android/cozy-drive.apk platforms/android/app/build/outputs/apk/release/app-release-unsigned.apk)",
+    "autosign:drive:android": "(cd src/drive/targets/mobile && mkdir -p build/android && apksigner sign --ks keys/android/cozy-drive-release-key.jks --ks-pass env:ANDROID_KEYSTORE_PASS --out build/android/cozy-drive.apk platforms/android/app/build/outputs/apk/release/app-release-unsigned.apk)",
     "buildsigned:drive:android": "yarn build:drive:android && yarn sign:drive:android",
     "publish:drive:android": "yarn build:drive:mobile && yarn buildsigned:drive:android && (cd src/drive/targets/mobile && fastlane android pushbeta)",
     "publishbeta:drive:android": "(cd src/drive/targets/mobile && fastlane android pushbeta)",
