feat: Upgrade cozy-client
set store to false when needed since cozyclient ensure its own store by
default.

--- a/package.json
+++ b/package.json
@@ -111,7 +111,7 @@
     "cozy-authentication": "^2.0.5",
     "cozy-bar": "7.16.0",
     "cozy-ci": "0.4.1",
-    "cozy-client": "20.2.1",
+    "cozy-client": "22.0.0",
     "cozy-client-js": "0.19.0",
     "cozy-device-helper": "1.11.0",
     "cozy-doctypes": "1.78.0",
@@ -151,6 +151,7 @@
     "react-autosuggest": "9.3.4",
     "react-dom": "16.13.1",
     "react-dropzone": "5.1.1",
+    "react-inspector": "^5.1.0",
     "react-measure": "2.5.0",
     "react-redux": "7.2.0",
     "react-remove-scroll": "^2.4.1",
