--- a/package.json
+++ b/package.json
@@ -111,19 +111,19 @@
     "cozy-authentication": "^2.0.5",
     "cozy-bar": "7.16.0",
     "cozy-ci": "0.4.1",
-    "cozy-client": "20.2.1",
+    "cozy-client": "22.0.0",
     "cozy-client-js": "0.19.0",
     "cozy-device-helper": "1.11.0",
     "cozy-doctypes": "1.78.0",
     "cozy-flags": "1.11.0",
     "cozy-harvest-lib": "5.1.0",
     "cozy-logger": "1.6.0",
-    "cozy-pouch-link": "15.6.0",
+    "cozy-pouch-link": "22.0.0",
     "cozy-realtime": "3.12.2",
     "cozy-scanner": "1.1.1",
     "cozy-scripts": "5.1.1",
     "cozy-sharing": "3.2.0",
-    "cozy-stack-client": "17.6.1",
+    "cozy-stack-client": "22.0.0",
     "cozy-ui": "47.6.0",
     "date-fns": "1.30.1",
     "diacritics": "1.3.0",
@@ -151,6 +151,7 @@
     "react-autosuggest": "9.3.4",
     "react-dom": "16.13.1",
     "react-dropzone": "5.1.1",
+    "react-inspector": "^5.1.0",
     "react-measure": "2.5.0",
     "react-redux": "7.2.0",
     "react-router": "3.2.4",
