--- a/package.json
+++ b/package.json
@@ -153,6 +153,7 @@
     "react-dropzone": "5.1.1",
     "react-measure": "2.5.0",
     "react-redux": "7.2.0",
+    "react-remove-scroll": "^2.4.1",
     "react-router": "3.2.4",
     "react-tooltip": "3.11.1",
     "redux": "3.7.2",
