--- a/package.json
+++ b/package.json
@@ -108,7 +108,7 @@
     "@material-ui/core": "4",
     "classnames": "2.2.6",
     "copy-text-to-clipboard": "1.0.4",
-    "cozy-authentication": "^2.0.5",
+    "cozy-authentication": "2.6.1",
     "cozy-bar": "7.16.0",
     "cozy-ci": "0.4.1",
     "cozy-client": "22.0.0",
