--- a/package.json
+++ b/package.json
@@ -111,19 +111,19 @@
     "cozy-authentication": "2.6.1",
     "cozy-bar": "7.16.0",
     "cozy-ci": "0.4.1",
-    "cozy-client": "23.0.0",
+    "cozy-client": "23.1.2",
     "cozy-client-js": "0.19.0",
     "cozy-device-helper": "1.12.0",
     "cozy-doctypes": "1.82.1",
     "cozy-flags": "2.6.0",
     "cozy-harvest-lib": "5.3.1",
     "cozy-logger": "1.6.0",
-    "cozy-pouch-link": "22.0.0",
+    "cozy-pouch-link": "23.2.0",
     "cozy-realtime": "3.13.0",
     "cozy-scanner": "1.1.1",
     "cozy-scripts": "5.1.1",
     "cozy-sharing": "3.3.3",
-    "cozy-stack-client": "22.0.0",
+    "cozy-stack-client": "23.0.0",
     "cozy-ui": "49.5.0",
     "date-fns": "1.30.1",
     "diacritics": "1.3.0",
@@ -143,6 +143,7 @@
     "piwik-react-router": "0.8.2",
     "popper.js": "1.16.1",
     "pouchdb-adapter-cordova-sqlite": "^2.0.7",
+    "pouchdb-adapter-indexeddb": "^7.2.2",
     "pouchdb-debug": "^7.2.1",
     "prop-types": "15.7.2",
     "propagating-hammerjs": "^2.0.1",
