--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@sentry/cli": "1.44.2",
     "@testing-library/react": "11.2.6",
     "@testing-library/react-hooks": "3.7.0",
+    "@welldone-software/why-did-you-render": "^6.1.4",
     "babel-core": "7.0.0-bridge.0",
     "chrome-remote-interface": "0.27.1",
     "cordova": "7.1.0",
