refactor: Use cozy-interapp instead of clientjs

--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "cozy-doctypes": "1.82.1",
     "cozy-flags": "2.6.0",
     "cozy-harvest-lib": "5.3.1",
+    "cozy-interapp": "^0.6.2",
     "cozy-logger": "1.6.0",
     "cozy-pouch-link": "23.21.0",
     "cozy-realtime": "3.13.0",
