--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "husky": "0.14.3",
     "identity-obj-proxy": "3.0.0",
     "jest-environment-jsdom-sixteen": "^1.0.3",
+    "jest-fetch-mock": "^3.0.3",
     "npm-run-all": "4.1.5",
     "react-addons-test-utils": "15.6.2",
     "react-test-renderer": "16.14.0",
