feat: Migrate PouchDB adapter
This asks the user having an old Pouch adapter (e.g. idb, cordova-sqlite)
if he wants to migrate it. We detect such need by an entry in the
localstorage set by cozy-pouch-link.

If the user refuses, we do not migrate and the user can use its Drive
normally. We ask the user each time it loads Drive until he accepts.
Once he does, we run the migration; at the end he can use again its
Drive, with better performances.

Indeed, the  indexedDB adapter greatly improves performances
for queries, replication and so on.
For example we measured the following on a Cozy with 10K docs:

* idb adapter
  * ~8s to index docs
  * ~260ms to query 1K docs
* indexeddb adapter
  * ~2.8s to index docs
  * ~160ms to query 1K docs

See also ttps://github.com/cozy/cozy-client/pull/989

feat: Catch error

refactor: Better naming

refactor: Better conditions organization

fix: isIOSApp is a function

chore: Upgrade cozy-pouch-link

--- a/package.json
+++ b/package.json
@@ -120,7 +120,7 @@
     "cozy-flags": "2.6.0",
     "cozy-harvest-lib": "5.3.1",
     "cozy-logger": "1.6.0",
-    "cozy-pouch-link": "22.0.0",
+    "cozy-pouch-link": "23.21.0",
     "cozy-realtime": "3.13.0",
     "cozy-scanner": "1.1.1",
     "cozy-scripts": "5.1.1",
@@ -145,6 +145,8 @@
     "piwik-react-router": "0.8.2",
     "popper.js": "1.16.1",
     "pouchdb-adapter-cordova-sqlite": "^2.0.7",
+    "pouchdb-adapter-idb": "7.2.2",
+    "pouchdb-adapter-indexeddb": "7.2.2",
     "pouchdb-debug": "^7.2.1",
     "prop-types": "15.7.2",
     "propagating-hammerjs": "^2.0.1",
