--- a/package.json
+++ b/package.json
@@ -126,7 +126,7 @@
     "cozy-scripts": "5.1.1",
     "cozy-sharing": "3.4.2",
     "cozy-stack-client": "23.0.0",
-    "cozy-ui": "50.2.0",
+    "cozy-ui": "^51.5.2",
     "date-fns": "1.30.1",
     "diacritics": "1.3.0",
     "fastclick": "1.0.6",
