--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@testing-library/react-hooks": "3.7.0",
     "@welldone-software/why-did-you-render": "^6.1.4",
     "babel-core": "7.0.0-bridge.0",
+    "bundlemon": "^1.0.0",
     "chrome-remote-interface": "0.27.1",
     "cordova": "7.1.0",
     "cordova-android": "7.1.4",
