feat: Do not display banner in flagship

--- a/package.json
+++ b/package.json
@@ -116,7 +116,7 @@
     "cozy-ci": "0.4.1",
     "cozy-client": "27.6.3",
     "cozy-client-js": "0.19.0",
-    "cozy-device-helper": "1.12.0",
+    "cozy-device-helper": "^1.14.0",
     "cozy-doctypes": "1.82.2",
     "cozy-flags": "2.6.0",
     "cozy-harvest-lib": "5.3.1",
