--- a/src/drive/targets/mobile/package.json
+++ b/src/drive/targets/mobile/package.json
@@ -9,7 +9,10 @@
     ]
   },
   "dependencies": {
-    "cordova-ios": "~4.5.5",
-    "cordova-android": "^9.1.0"
+    "cordova-ios": "4.5.5",
+    "cordova-android": "9.1.0",
+    "cordova-custom-config": "5.1.0",
+    "klaw": "4.0.1",
+    "xml2js": "0.4.23"
   }
 }
