--- a/package.json
+++ b/package.json
@@ -118,10 +118,11 @@
     "cozy-ci": "0.4.1",
     "cozy-client": "27.14.2",
     "cozy-client-js": "0.19.0",
-    "cozy-device-helper": "^1.14.0",
+    "cozy-device-helper": "1.16.1",
     "cozy-doctypes": "1.82.2",
     "cozy-flags": "2.6.0",
     "cozy-harvest-lib": "5.3.1",
+    "cozy-intent": "1.5.0",
     "cozy-keys-lib": "4.1.1",
     "cozy-logger": "1.6.0",
     "cozy-pouch-link": "27.14.2",
@@ -130,7 +131,7 @@
     "cozy-scripts": "5.1.1",
     "cozy-sharing": "^3.12.9",
     "cozy-stack-client": "27.14.1",
-    "cozy-ui": "^51.5.2",
+    "cozy-ui": "60.9.1",
     "date-fns": "1.30.1",
     "diacritics": "1.3.0",
     "fastclick": "1.0.6",
