--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 node-preset: &node # Used internally to share configuration, ignored by travis.
   language: node_js
   node_js:
-    - "12"
+    - 12
+    - 16
   cache:
     yarn: true
     directories:
@@ -23,9 +24,17 @@ jobs:
       stage: "prebuild"
       <<: *node
       script: yarn lint
-    - name: "Unit tests"
+    - name: "Unit tests node 16"
       stage: "prebuild"
       <<: *node
+      node_js:
+        - 16
+      script: yarn test
+    - name: "Unit tests node 12"
+      stage: "prebuild"
+      <<: *node
+      node_js:
+        - 12
       script: yarn test
     - &build-web
       name: "Drive web"
