--- a/package.json
+++ b/package.json
@@ -82,11 +82,11 @@
     "@testing-library/react-hooks": "3.7.0",
     "@welldone-software/why-did-you-render": "^6.1.4",
     "babel-core": "7.0.0-bridge.0",
+    "babel-runtime": "^6.26.0",
     "bundlemon": "^1.0.0",
     "chrome-remote-interface": "0.31.2",
     "cordova": "8.1.2",
     "cordova-android": "9.1.0",
-    "cozy-jobs-cli": "1.15.9",
     "css-mediaquery": "^0.1.2",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.6",
