--- a/package.json
+++ b/package.json
@@ -131,7 +131,7 @@
     "cozy-realtime": "3.13.0",
     "cozy-scanner": "2.0.2",
     "cozy-scripts": "5.1.1",
-    "cozy-sharing": "^3.12.9",
+    "cozy-sharing": "4.1.3",
     "cozy-stack-client": "27.15.0",
     "cozy-ui": "62.1.0",
     "date-fns": "1.30.1",
