--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "@welldone-software/why-did-you-render": "^6.1.4",
     "babel-core": "7.0.0-bridge.0",
     "babel-runtime": "^6.26.0",
-    "bundlemon": "^1.0.0",
+    "bundlemon": "1.3.0",
     "chrome-remote-interface": "0.31.2",
     "cordova": "8.1.2",
     "cordova-android": "9.1.0",
