--- a/package.json
+++ b/package.json
@@ -134,7 +134,7 @@
     "cozy-scripts": "5.1.1",
     "cozy-sharing": "4.1.5",
     "cozy-stack-client": "^27.19.4",
-    "cozy-ui": "62.1.2",
+    "cozy-ui": "^62.2.0",
     "date-fns": "1.30.1",
     "diacritics": "1.3.0",
     "fastclick": "1.0.6",
