feat: Upgrade cozy-ui for URL-based viewer
This upgrade includes a breaking change requiring to upgrade cozy-client and cozy-device-helper. And the cozy-client upgrade requires to upgrade cozy-logger, cozy-flags

--- a/package.json
+++ b/package.json
@@ -116,22 +116,22 @@
     "cozy-authentication": "2.8.3",
     "cozy-bar": "7.17.7",
     "cozy-ci": "0.4.1",
-    "cozy-client": "^27.19.4",
+    "cozy-client": "28.2.0",
     "cozy-client-js": "0.19.0",
-    "cozy-device-helper": "1.17.0",
+    "cozy-device-helper": "1.18.0",
     "cozy-doctypes": "1.82.2",
-    "cozy-flags": "2.6.0",
+    "cozy-flags": "2.8.6",
     "cozy-harvest-lib": "5.10.5",
     "cozy-intent": "^1.17.1",
     "cozy-keys-lib": "4.1.1",
-    "cozy-logger": "1.6.0",
+    "cozy-logger": "1.9.0",
     "cozy-pouch-link": "^27.19.4",
     "cozy-realtime": "3.13.0",
     "cozy-scanner": "2.0.2",
     "cozy-scripts": "6.3.1",
     "cozy-sharing": "4.1.5",
-    "cozy-stack-client": "^27.19.4",
-    "cozy-ui": "^62.4.3",
+    "cozy-stack-client": "28.2.0",
+    "cozy-ui": "^65.1.1",
     "date-fns": "1.30.1",
     "diacritics": "1.3.0",
     "fastclick": "1.0.6",
