--- a/package.json
+++ b/package.json
@@ -131,7 +131,7 @@
     "cozy-scripts": "6.3.1",
     "cozy-sharing": "4.1.5",
     "cozy-stack-client": "28.2.0",
-    "cozy-ui": "^65.1.1",
+    "cozy-ui": "65.1.3",
     "date-fns": "1.30.1",
     "diacritics": "1.3.0",
     "fastclick": "1.0.6",
