--- a/.bundlemonrc
+++ b/.bundlemonrc
@@ -4,43 +4,53 @@
   "files": [
     {
       "path": "app/drive.<hash>.js",
+      "maxPercentIncrease": 0.5,
       "maxSize": "234 KB"
     },
     {
       "path": "app/drive.<hash>.min.css",
+      "maxPercentIncrease": 0.5,
       "maxSize": "55 KB"
     },
     {
       "path": "public/cozy-bar.css",
+      "maxPercentIncrease": 0.5,
       "maxSize": "24 KB"
     },
     {
       "path": "public/drive.<hash>.js",
+      "maxPercentIncrease": 0.5,
       "maxSize": "1.60 MB"
     },
     {
       "path": "public/drive.<hash>.min.css",
+      "maxPercentIncrease": 0.5,
       "maxSize": "86 KB"
     },
     {
       "path": "public/pdf.worker.entry.<hash>.worker.js",
+      "maxPercentIncrease": 0.5,
       "maxSize": "221 KB"
     },
     {
       "path": "services/dacc/drive.js",
+      "maxPercentIncrease": 0.5,
       "maxSize": "249 KB"
     },
     {
       "path": "services/qualificationMigration/drive.js",
-      "maxSize": "242 KB"
+      "maxPercentIncrease": 0.5,
+      "maxSize": "243 KB"
     },
     {
       "path": "vendors/drive.<hash>.<hash>.min.css",
+      "maxPercentIncrease": 0.5,
       "maxSize": "35 KB"
     },
     {
       "path": "vendors/drive.<hash>.js",
-      "maxSize": "1.54 MB"
+      "maxPercentIncrease": 0.5,
+      "maxSize": "1.54 MB",
     }
   ],
   "reportOutput": ["github"]
